[project]
name = "ComfyUI-RunPythonCode"
description = "Run arbitrary Python code to save you the hassle of connecting dozens of nodes for simple stuff."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = [
    "torch",
    "numpy", 
    "pillow" # for very useful included image type transformation utils (pil2tensor, ...)
]

[project.urls]
Repository = "https://github.com/GreenLandisaLie/ComfyUI-RunPythonCode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "greenlandisalie"
DisplayName = "ComfyUI-RunPythonCode"
Icon = ""
